Bump to java 17